# ocaml-ETL

./: README.md
.devcontainer/: Dockerfile
etl/: dune-project  etl.opam
etl/data/: output.db
etl/lib/: csv_utils.ml  csv_utils.mli  dune  helper.ml  helper.mli  mapper.ml  mapper.mli  reader.ml  records.ml  transformer.ml  transformer.mli
etl/test/: dune  test_helper.ml  test_mapper.ml  test_transformer.ml
